# firebase-admin-rs

./: Cargo.toml  LICENSE.md  README.md
examples/auth/: main.rs
src/: api.rs  app.rs  auth.rs  authentication.rs  lib.rs
